<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calculator_background"
    android:orientation="vertical"
    android:padding="@dimen/calculator_screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:minHeight="@dimen/calculator_display_min_height"
        android:orientation="vertical"
        android:padding="@dimen/calculator_display_padding">

        <TextView
            android:id="@+id/tvExpression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="2"
            android:textColor="@color/calculator_display_text"
            android:textSize="@dimen/calculator_expression_text_size" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/calculator_default_result"
            android:textColor="@color/calculator_result_text"
            android:textSize="@dimen/calculator_result_text_size" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="@style/CalculatorButton.Number"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/calculator_clear" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackspace"
            style="@style/CalculatorButton.Number"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/calculator_backspace" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivide"
            style="@style/CalculatorButton.Operator"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="/" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMultiply"
            style="@style/CalculatorButton.Operator"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="*" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            style="@style/CalculatorButton.Number"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            style="@style/CalculatorButton.Number"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            style="@style/CalculatorButton.Number"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubtract"
            style="@style/CalculatorButton.Operator"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="-" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            style="@style/CalculatorButton.Number"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            style="@style/CalculatorButton.Number"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            style="@style/CalculatorButton.Number"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/CalculatorButton.Operator"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="+" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            style="@style/CalculatorButton.Number"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            style="@style/CalculatorButton.Number"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            style="@style/CalculatorButton.Number"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEquals"
            style="@style/CalculatorButton.Operator"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/calculator_equals" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            style="@style/CalculatorButton.Number"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_rowWeight="1"
            android:text="0" />

    </GridLayout>

</LinearLayout>
